fix: adjust spacing throughout homepage - Remove header margin - Reduce benefits section padding - Adjust footer spacing

--- a/src/components/layout/Footer/Footer.scss
+++ b/src/components/layout/Footer/Footer.scss
@@ -4,7 +4,7 @@
 .footer {
     background-color: #78aafa;
     width: 100%;
-    padding: 2rem 0;
+    padding: 3rem 0;
     margin: 0;
 
     &__row {
@@ -18,7 +18,7 @@
 
     &__col {
         padding: 0 1rem;
-        margin-bottom: 2rem;
+        margin-bottom: 0;
     }
 
     &__logo {
