--- a/src/pages/site/Home/Home.scss
+++ b/src/pages/site/Home/Home.scss
@@ -7,7 +7,7 @@
     min-height: calc(100vh - #{$header-height});
     display: flex;
     color: $light-text-color;
-    margin-top: $header-height;
+    margin-top: 0;
     background-size: cover;
     background-position: center;
     
@@ -88,16 +88,17 @@
 }
 
 .our-benefits {
-    padding: 4rem 0 0 0;
+    padding: 0;
     font-size: 1.6rem;
     text-align: center;
     background-color: $brand-primary-color;
     color: $light-text-color !important;
+    margin-top: 0;
     
     .container {
         max-width: 1200px;
         margin: 0 auto;
-        padding: 0 2rem;
+        padding: 4rem 2rem 0;
     }
     
     &__title {
@@ -107,7 +108,7 @@
     }
 
     &__sub-tittle {
-        margin-bottom: 4rem;
+        margin-bottom: 3rem;
         color: $light-text-color !important;
         max-width: 800px;
         margin-left: auto;
@@ -120,7 +121,7 @@
         gap: 3rem;
         max-width: 1200px;
         margin: 0 auto;
-        padding-bottom: 4rem;
+        padding-bottom: 3rem;
     }
 
     &__item {
